Changelog
=========

2019.3.1 (unreleased)
---------------------

- Add POST restapi endpint @mworkspace-invitations/{id}/{action}. [elioschmutz]
- Add GET restapi endpint @my-workspace-invitations. [elioschmutz]
- Add restapi @participations endpoint to handle participations. [elioschmutz]
- Add per user configuration to deactivate inbox notifications. [njohner]
- Register ChoiceFieldDeserializer using overrides instead of configure ZCML. [lgraf]
- Update Creator, created and Date when copy/pasting an object. [njohner]
- Docs: Add tasks to documented content types. [lgraf]
- Add per user configuration to activate notifications for own actions. [njohner]


2019.3.0 (2019-06-17)
---------------------

- Archiving form: Make sure dossier resolution preconditions are validated and handled. [lgraf]
- Fix encoding issue in OGDSUpdater's error logging. [lgraf]
- Provides support for some additional metadata on the search endpoint. [phgross]
- Include file_extension in API representation of documents. [phgross]
- Translate keyword-filter label. [phgross]
- Support searching on group description in sharing form. [phgross]
- Add CMFEditions modifier that prevents journals from being versioned. [lgraf]
- Forbid transitions linked to dossier offer process through RESTAPI. [njohner]
- Add an ftw.tesbrowser widget for filling responsible(s) in the tests. [Rotonen]
- Only allow dossier transitions that are possible on the main dossier. [njohner]
- Prefix agendaitem decision numbers and meeting number by correct period title. [njohner]
- Handle dossier activation through RESTAPI. [njohner]
- Sort BlockedLocalRolesList on reference number. [njohner]
- Improve error message when trying to delete a referenced document. [njohner]
- Handle dossier deactivation through RESTAPI. [njohner]
- Fix bug with resolving a reopened dossier. [njohner]
- Update documentation for SaaS deployment update. [njohner]
- Correctly handle dossier reactivation through RESTAPI. [njohner]